# hephaestus-temp

./: .gitignore  LICENSE  README.md
alexandre/: .gitignore
alexandre/feature-modeling/: Main.hs  NewMain.hs  OldMain.hs  Test.hs  TestSetup.hs  feature-modeling.cabal
alexandre/feature-modeling/samples/newTypes/: BasicFeature.hs  FMMobile.hs  README
alexandre/feature-modeling/samples/splot/: FeatureModel0.xml
alexandre/feature-modeling/src/FeatureModel/: FMTypeChecker.lhs  Logic.hs  NewFMTypeChecker.hs  Types.lhs
alexandre/feature-modeling/src/FeatureModel/NewTypes/: Types.hs  Util.hs
alexandre/feature-modeling/src/FeatureModel/Parsers/: GenericParser.hs  OldGenericParser.hs
alexandre/feature-modeling/src/FeatureModel/Parsers/SPLOT/: AbsSPLOT.hs  ErrM.hs  LexSPLOT.hs  NewSPLOT2FeatureModel.hs  ParSPLOT.hs  SPLOT2FeatureModel.hs  SkelSPLOT.hs
alexandre/feature-modeling/trouble-deps/: Main.lhs  README
alexandre/feature-modeling/trouble-deps/benchpress-0.2.2.6/: benchpress.cabal
alexandre/feature-modeling/trouble-deps/funsat-0.6.2/: funsat.cabal
alexandre/feature-modeling/trouble-deps/funsat-0.6.2/tests/: Properties.hs
alexandre/util/src/: BasicTypes.hs
feature-modeling/src/: BasicFeature.hs  FMMobile.hs
feature-modeling/src/Core/: Types.hs
feature-modeling/src/Util/: Util.hs
willian/: Comentarios Hephaestus-Install.txt  ExportProduct.hs  Roteiro instalacao hephaestus completo.txt
willian/hephaestus-integrated/plasma-cutter/: test  (+5 more)
willian/hephaestus-parser-only/: BoolExprParser.Y~  LineParser.hs  LineParser.x  LineParser.y~  PlasmaCutter.hs
(+14 files in other folders)
